test/expected/declare_cri.out
declare r as const reference to int
        ^
9: error: reference not supported in C
